--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start": "vite",
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "postbuild": "cpx 'dist/**/*' Travelize/client/dist",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "https://travelize-backend.onrender.com",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -46,6 +47,7 @@
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
+    "cpx": "^1.5.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
