--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview",
     "test": "jest"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "https://travelize-backend.onrender.com",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
